--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,11 +8,19 @@
         android:icon="@drawable/ohm"
         android:theme="@android:style/Theme.Holo.Light">
         <activity
-            android:name="MainActivity"
+            android:name="GyroPlotActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="MainActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
         </activity>
         <activity
