--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.adamleeper.omegaplot"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="0.1">
+    <uses-sdk android:minSdkVersion="14"
+        android:targetSdkVersion="19" />
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ohm"
@@ -16,21 +18,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="DisplayMessageActivity"
-            android:label="@string/title_activity_display_message"
-            android:parentActivityName="MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity"/>
-        </activity>
+        <!--<activity-->
+            <!--android:name="MainActivity"-->
+            <!--android:label="@string/app_name">-->
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
+                <!--&lt;!&ndash;<category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name="DisplayMessageActivity"-->
+            <!--android:label="@string/title_activity_display_message"-->
+            <!--android:parentActivityName="MainActivity">-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value="MainActivity"/>-->
+        <!--</activity>-->
     </application>
 </manifest>
