--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
       package="com.adamleeper.omegaplot"
       android:versionCode="1"
       android:versionName="0.1">
-    <uses-sdk android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+    <!--<uses-sdk android:minSdkVersion="14"-->
+        <!--android:targetSdkVersion="19" />-->
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ohm"
